crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__unused_polymorphic_bottom_is_still_strict.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nmain : unit\nmain =\n    let\n        unused = fail\n    in\n    ()\n"
---
--- core
let fromUnit#3 : unit -> unit = \value#4 : unit -> value#4 in
let unused#2 : 'erased = error in
let main#1 : unit = fromUnit#3 () in
main#1
--- uplc
(program 1.1.0
  [(lam fromUnit_3
    [(lam unused_2 [(lam main_1 main_1) [fromUnit_3 (con unit ())]]) (error)])
    (lam value_4 value_4)])
--- result
error: ExplicitErrorTerm
--- logs
[]
--- budget
cpu: 100, memory: 100
