crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__zero_drop_still_checks_its_list_argument.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin\nwrong : list int\nwrong = Primitive.coerce ()\nmain : unit\nmain =\n    let\n        xs = Builtin.dropList 0 wrong\n    in\n    ()\n"
---
--- core
let fromUnit#3 : unit -> unit = \value#6 : unit -> value#6 in
let fromInt#4 : int -> int = \value#7 : int -> value#7 in
let wrong#5 : list int = (\coerce#8 : 'erased -> coerce#8) (fromUnit#3 ()) in
let xs#2 : list int = dropList (fromInt#4 0) wrong#5 in
let main#1 : unit = fromUnit#3 () in
main#1
--- uplc
(program 1.1.0
  [(lam fromUnit_3
    [(lam fromInt_4
      [(lam wrong_5
        [(lam xs_2 [(lam main_1 main_1) [fromUnit_3 (con unit ())]])
          [[(force (builtin dropList)) [fromInt_4 (con integer 0)]] wrong_5]])
        [(lam coerce_8 coerce_8) [fromUnit_3 (con unit ())]]])
      (lam value_7 value_7)])
    (lam value_6 value_6)])
--- result
error: Runtime(ExpectedList(Unit))
--- logs
[]
--- budget
cpu: 100, memory: 100
